# jupyterlab-docker

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.build/: .versions.yml
.build/python/: README.md  pyproject.toml
.build/python/okdp/extension/matrix/: constants.py
.build/python/okdp/extension/tagging/: apply_tags.py  taggers.py
.build/python/okdp/patch/: README.md
.build/python/okdp/patch/tests/: run_tests.py
.build/python/src/okdp/extension/matrix/: constants.py  version_compatibility_matrix.py
.build/python/src/okdp/extension/matrix/utils/: matrix_utils.py
.build/python/src/okdp/extension/tagging/: apply_tags.py  get_taggers_and_manifests.py  images_hierarchy.py  taggers.py
.build/python/src/okdp/patch/: README.md
.build/python/src/okdp/patch/images/pyspark-notebook/: setup_spark.py
.build/python/src/okdp/patch/tests/: run_tests.py
.build/python/src/okdp/patch/tests/by_image/all-spark-notebook/: test_spark_r_nbconvert.py
.build/python/src/okdp/patch/tests/by_image/docker-stacks-foundation/: test_python_version.py
.build/python/src/okdp/patch/tests/utils/: tracked_container.py
.build/python/tests/extension/matrix/: test_version_compatibility_matrix.py
.build/python/tests/extension/matrix/resources/: expected_build_matrix_empty.json
.build/python/tests/okdp/extension/matrix/: conftest.py  test_version_compatibility_matrix.py
.build/python/tests/okdp/extension/matrix/resources/: expected_build_matrix_empty.json
.build/python/tests/okdp/extension/tagging/: conftest.py  test_tagging.py
.devcontainer/: Dockerfile  devcontainer.json
(+49 files in other folders)
