[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okdp"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["okdp*", "okdp.extension*", "okdp.patches*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
